# wsolv

./: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/wsolv/app/: MainActivity.kt
app/src/main/kotlin/com/wsolv/app/assets/: AssetLoader.kt
app/src/main/kotlin/com/wsolv/app/home/: HomeScreen.kt
app/src/main/kotlin/com/wsolv/app/nav/: AppNav.kt
app/src/main/kotlin/com/wsolv/app/persist/: RejectStore.kt
app/src/main/kotlin/com/wsolv/app/poople/: PoopleScreen.kt  PoopleUiState.kt  PoopleViewModel.kt
app/src/main/kotlin/com/wsolv/app/reverse/: ReverseScreen.kt  ReverseUiState.kt  ReverseViewModel.kt
app/src/main/kotlin/com/wsolv/app/wordle/: WordleScreen.kt  WordleUiState.kt  WordleViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
core/: build.gradle.kts
core/src/main/kotlin/com/wsolv/core/common/: WsolvException.kt
core/src/main/kotlin/com/wsolv/core/feedback/: Feedback.kt
core/src/main/kotlin/com/wsolv/core/poople/: PoopleSolver.kt
core/src/main/kotlin/com/wsolv/core/wordle/: DecisionTree.kt  GuessPresenter.kt  LosingWordleSolver.kt  TreeMeta.kt  WordleLoader.kt  WordleSolver.kt
core/src/test/kotlin/com/wsolv/core/feedback/: FeedbackTest.kt
core/src/test/kotlin/com/wsolv/core/poople/: PoopleSolverTest.kt
core/src/test/kotlin/com/wsolv/core/wordle/: DecisionTreeTest.kt  TreeBytesBuilder.kt  (+3 more)
core/src/test/resources/: feedback_vectors.json  tree_meta.json
gradle/: libs.versions.toml
tools/: gen_feedback_vectors.py  pyproject.toml
tools/tests/: test_build_tree.py  test_feedback.py  test_serialize.py  test_validate.py
tools/wsolv_precompute/: __init__.py  build_tree.py  cli.py  feedback.py  serialize.py  validate.py
(+3 files in other folders)
